# strainspotter-web

./: .cursorignore 2  .env.dataset.example  .env.example  .env.local.example  .gitignore  .vercelignore  ADMIN_SYSTEM_SUMMARY.md  AI_PHASE_2_3_4_SUMMARY.md  AI_SYSTEM_UPGRADE_SUMMARY.md  APPLY_INDEXES_GUIDE.md  AUDIT_REPORT.md  AUTH_CRASH_FIX_COMPLETE 2.md  AUTH_FIX_COMPLETE 2.md  AUTH_OVERHAUL_SUMMARY.md  AUTH_OVERHAUL_SUPABASE_SETUP.md  AUTOMATION_GUIDE.md  BACKEND_HANDOFF.md  BACKUP_COMPLETE.md  BUILD_ERROR_REPORT.md  BUILD_INSTALLERS_GUIDE.md  BUILD_INSTALLERS_SUMMARY.md  CANONICAL_QUERY_ENHANCEMENT_COMPLETE.md  CAPACITOR_SETUP_COMPLETE.md  CATEGORIZATION_COMPLETE.md  CLAUDE_HANDOFF_STRAINSPOTTER.md  CLEANUP_PHASE1_EXECUTED.md  COMMANDS.txt  COMMIT_MESSAGE.txt  COMMUNITY_INTELLIGENCE_SETUP.md  COMPLETE_AI_SYSTEM_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  COMPREHENSIVE_TEST_REPORT.md  CONFIG_ENV_OVERVIEW.md  CONSOLE_ERRORS_FIXED.md  CREATE_ACCOUNT_STEPS.md  CREATE_PR.md  CRON_SETUP_CONFIRMED.md  CURSOR_RULES.md  CUSTOM_DOMAIN_FIX_REPORT.md  CUSTOM_DOMAIN_NEXT_STEPS.md  (+173 more)
.github/: copilot-instructions.md
StrainSpotter_AppStore_Kit_v4/: AppStore_Listing_Text.md  PHASE_3_iOS_Xcode_Signing_Archive.md  PHASE_4_App_Store_Connect_Listing.md  PrivacyPolicy_StrainSpotter.html  README_Phases_and_Commands.md
app/: AuthGate.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  layout.tsx.bak  layout.tsx.bak_desktop  layout.tsx.bak_force_center  not-found.tsx  page-real.tsx 2.backup  page-simple-test 2.tsx  page.tsx  (+1 more)
lib/: api.ts  (+26 more)
test-app/src-tauri/: Cargo.toml  tauri.conf.json
(+1552 files in other folders)
